--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projeto_carteira_virtutal">
-        <activity android:name=".Telas.SegundaTela"></activity>
+        <activity android:name=".Telas.ObjetivoActivity"></activity>
+        <activity android:name=".Telas.MainActivity" />
+        <activity android:name=".Telas.SegundaTela" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
